Change Google Analytics ID in index.html
Updated Google Analytics tracking ID in the script.

--- a/index.html
+++ b/index.html
@@ -130,12 +130,12 @@
     <link rel="apple-touch-icon" href="data:image/svg+xml,%3Csvg width='180' height='180' viewBox='0 0 180 180' xmlns='http://www.w3.org/2000/svg'%3E%3Ccircle cx='90' cy='90' r='85' fill='%234A5A96'/%3E%3Ccircle cx='90' cy='90' r='63' fill='%23FFFFFF'/%3E%3Ccircle cx='90' cy='90' r='53' fill='%235DC1D4'/%3E%3C/svg%3E">
     
     <!-- Google Analytics 4 -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-LKC2WHTC15"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
-      gtag('config', 'G-XXXXXXXXXX', {
+      gtag('config', 'G-LKC2WHTC15', {
         'send_page_view': true,
         'anonymize_ip': true
       });
