Integrate Google Tag Manager into index.html
Added Google Tag Manager scripts for tracking.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Oxygen Students Paradise | Fast Printing & Binding in Triprayar, Thrissur</title>
     <meta name="description" content="Professional printing, binding, scanning & DTP services in Triprayar. 1-hour express service, 4.8★ rated by 58+ students. Below HDFC Bank, Poly Junction. Call 8089 699 436">
+
+    <!-- Google Tag Manager -->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-KRT6G3X4');</script>
+    <!-- End Google Tag Manager -->
     
     <!-- SEO Meta Tags -->
     <meta name="keywords" content="printing services Triprayar, thesis binding Thrissur, document scanning Kerala, photostat Triprayar, spiral binding, perfect binding, DTP services, student printing, project binding, passport applications Triprayar, PSC registration, university registration, CV writing, lamination services, government services Triprayar">
@@ -957,6 +965,11 @@
     </style>
 </head>
 <body>
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KRT6G3X4"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
+    
     <!-- Background Elements -->
     <div class="background-gradient"></div>
     <div class="background-shape shape-1"></div>
